--- a/argocd-apps-structure/appsets/my-prod-appset.yml
+++ b/argocd-apps-structure/appsets/my-prod-appset.yml
@@ -12,7 +12,7 @@ spec:
       revision: HEAD
       directories:
       - path: argocd-apps-structure/apps/*/envs/prod-us
-      - path: argocd-apps-structure/apps/*/envs/prod-eu      
+      - path: argocd-apps-structure/apps/*/envs/prod-eu
   template:      
     metadata:
       name: '{{index .path.segments 2}}-{{index .path.segments 4}}' 
@@ -28,7 +28,7 @@ spec:
       
       # Destination cluster and namespace to deploy the application
       destination:
-        server: https://kubernetes.default.svc
+        name: cluster-2
         namespace: '{{index .path.segments 2}}-{{index .path.segments 4}}'
 
       # Sync policy
